--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -11,7 +11,7 @@
         <div class="username">
           <%= link_to friend.user.username, user_path(friend.user) %>
         </div>
-        <p><%= link_to follow_user_path(friend.user), :class => "btn_gray" do %>
+        <p><%= link_to follow_user_path(friend.user), :class => "btn_gray", :method => :put do %>
               <span>加关注</span>
            <% end %>
          </p>
